[gd_scene load_steps=3 format=3 uid="uid://b5a8defq4oknl"]

[ext_resource type="Texture2D" uid="uid://clrel65qmj5tt" path="res://mainMenuBackdrop.png" id="1_8m48j"]
[ext_resource type="Script" path="res://main_menu.gd" id="1_chiaj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_chiaj")

[node name="Backdrop" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -231.5
offset_top = -268.0
offset_right = 231.5
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_8m48j")
stretch_mode = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 0.75

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Title" type="Label" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Mazer"
horizontal_alignment = 1

[node name="PlayBtn" type="Button" parent="AspectRatioContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../QuitBtn")
focus_neighbor_bottom = NodePath("../QuitBtn")
focus_next = NodePath("../QuitBtn")
focus_previous = NodePath("../QuitBtn")
text = "Play"

[node name="QuitBtn" type="Button" parent="AspectRatioContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../PlayBtn")
focus_neighbor_bottom = NodePath("../PlayBtn")
focus_next = NodePath("../PlayBtn")
focus_previous = NodePath("../PlayBtn")
text = "Quit to Desktop"

[connection signal="pressed" from="AspectRatioContainer/VBoxContainer/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="AspectRatioContainer/VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
